// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration:: contact us - public user should return contact us further information account creation page 1`] = `
Object {
  "contentId": "a06d6387-d411-47db-8f7d-88871286330b",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user should return contact us further information signing in page 1`] = `
Object {
  "contentId": "a06d6387-d411-47db-8f7d-88871286330b",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user should return contact us page 1`] = `
Object {
  "contentId": "e08d04e6-b24f-4bad-9955-1eb860771747",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user should return contact us page including valid referer url 1`] = `
Object {
  "contentId": "e08d04e6-b24f-4bad-9955-1eb860771747",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user should return contact us page including valid referer url 2`] = `
Object {
  "contentId": "e08d04e6-b24f-4bad-9955-1eb860771747",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user should return contact us page including valid referer url 3`] = `
Object {
  "contentId": "e08d04e6-b24f-4bad-9955-1eb860771747",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user should return contact us page including valid referer url 4`] = `
Object {
  "contentId": "e08d04e6-b24f-4bad-9955-1eb860771747",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user should return contact us page including valid referer url 5`] = `
Object {
  "contentId": "e08d04e6-b24f-4bad-9955-1eb860771747",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user should return contact us page including valid referer url 6`] = `
Object {
  "contentId": "e08d04e6-b24f-4bad-9955-1eb860771747",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user should return contact us page removing invalid referer url 1`] = `
Object {
  "contentId": "e08d04e6-b24f-4bad-9955-1eb860771747",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user should return contact us page removing invalid referer url 2`] = `
Object {
  "contentId": "e08d04e6-b24f-4bad-9955-1eb860771747",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user should return contact us page removing invalid referer url 3`] = `
Object {
  "contentId": "e08d04e6-b24f-4bad-9955-1eb860771747",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user should return contact us page removing invalid referer url 4`] = `
Object {
  "contentId": "e08d04e6-b24f-4bad-9955-1eb860771747",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user should return contact us questions page including valid referer queryparam url 1`] = `
Object {
  "contentId": "a06d6387-d411-47db-8f7d-88871286330b",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user should return contact us questions page including valid referer queryparam url 2`] = `
Object {
  "contentId": "a06d6387-d411-47db-8f7d-88871286330b",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user should return contact us questions page including valid referer queryparam url 3`] = `
Object {
  "contentId": "a06d6387-d411-47db-8f7d-88871286330b",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user should return contact us questions page including valid referer queryparam url 4`] = `
Object {
  "contentId": "a06d6387-d411-47db-8f7d-88871286330b",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user should return contact us questions page including valid referer queryparam url 5`] = `
Object {
  "contentId": "a06d6387-d411-47db-8f7d-88871286330b",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user should return contact us questions page including valid referer queryparam url 6`] = `
Object {
  "contentId": "a06d6387-d411-47db-8f7d-88871286330b",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user should return contact us questions page removing invalid referer queryparam url 1`] = `
Object {
  "contentId": "a06d6387-d411-47db-8f7d-88871286330b",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user should return contact us questions page removing invalid referer queryparam url 2`] = `
Object {
  "contentId": "a06d6387-d411-47db-8f7d-88871286330b",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user should return contact us questions page removing invalid referer queryparam url 3`] = `
Object {
  "contentId": "a06d6387-d411-47db-8f7d-88871286330b",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user should return contact us questions page with a theme and a subtheme 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user should return contact us questions page with only a theme 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user should return error when csrf not present 1`] = `
Object {
  "contentId": undefined,
  "taxonomyLevel1": undefined,
  "taxonomyLevel2": undefined,
  "taxonomyLevel3": undefined,
  "taxonomyLevel4": undefined,
  "taxonomyLevel5": undefined,
}
`;

exports[`Integration:: contact us - public user should return validation error when no radio boxes are selected on the proving_identity contact-us-further-information page 1`] = `
Object {
  "contentId": "a06d6387-d411-47db-8f7d-88871286330b",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user should return validation error when no radio boxes are selected on the signing in contact-us-further-information page 1`] = `
Object {
  "contentId": "a06d6387-d411-47db-8f7d-88871286330b",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user visiting contact-us-questions directly should return validation error when issue description are not entered on the contact-us-questions page 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user visiting contact-us-questions directly should return validation error when user has not selected how the security code was sent whilst creating an account 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user visiting contact-us-questions directly should return validation error when user selected Text message to a phone number from another country and left the Which country field empty 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user visiting contact-us-questions directly should return validation error when user selected yes to contact for feedback and left email field empty 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user visiting contact-us-questions directly should return validation error when user selected yes to contact for feedback but email is in an invalid format 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user visiting contact-us-questions directly somebody else is using your information phone number validation international phone number should return validation error when invalid number 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user visiting contact-us-questions directly somebody else is using your information phone number validation international phone number should return validation error when not using numbers 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user visiting contact-us-questions directly somebody else is using your information phone number validation international phone number should return validation error when wrong length 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user visiting contact-us-questions directly somebody else is using your information phone number validation uk phone number should return validation error when non-uk number 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user visiting contact-us-questions directly somebody else is using your information phone number validation uk phone number should return validation error when not using numbers 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user visiting contact-us-questions directly somebody else is using your information phone number validation uk phone number should return validation error when wrong length 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user visiting contact-us-questions directly somebody else is using your information should return validation error when email address is invalid 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user visiting contact-us-questions directly somebody else is using your information should return validation error when email is empty 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user visiting contact-us-questions directly somebody else is using your information should return validation error when user hasn't selected any reasons 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user when a user had a problem taking a photo of your identity document using the GOV.UK ID Check app should return validation error when user has not selected which identity document they were using 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user when a user had a problem with their bank or building society details should return validation error when user has not selected which problem they had 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user when a user had a problem with their identity document should return validation error when user has not selected which identity document they were using 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user when a user had a problem with their national insurance number should return validation error when user has not described which problem they had 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user when a user had a problem with their phone number when creating an account should return validation error when user has not entered country the phone number is from 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user when a user had a problem with their phone number when creating an account should return validation error when user has not entered what happened 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user when a user had a problem with their phone number when creating an account should return validation error when user has not entered what they were trying to do 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user when a user has not stated their location should return validation error when they submit the 'A problem entering your address' form 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: contact us - public user when a user has not stated their location should return validation error when they submit the 'Another problem proving your identity' form 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "feedback",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;
